samples/_failures_safe/1761497901_dba96a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1da6a6ce.c: In function ‘main’:
./samples/SAFE/__tmp_1da6a6ce.c:169:33: error: expected ‘)’ at end of input
  169 |     if (scanf("%d", &start_node)
      |        ~                        ^
      |                                 )
./samples/SAFE/__tmp_1da6a6ce.c:169:5: error: expected declaration or statement at end of input
  169 |     if (scanf("%d", &start_node)
      |     ^~
